--- a/blog/Templates/blog/allblog.html
+++ b/blog/Templates/blog/allblog.html
@@ -4,11 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- <meta name="description" content=""> -->
-    <!-- <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors"> -->
-    <!-- <meta name="generator" content="Jekyll v3.8.5"> -->
     <title>VIKASH SANGWAN</title>
-
     <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/album/">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
@@ -41,7 +37,7 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav ml-auto">
         <a class="nav-item nav-link" href="#">Resume<span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link" href="allblog.html">Blog</a>
+        <a class="nav-item nav-link active" href="#">Blog</a>
         <a class="nav-item nav-link" href="https://www.linkedin.com/in/vikash-sangwan-608305169/">Linkdin</a>
         <a class="nav-item nav-link" href="#">Twitter</a>
         <a class="nav-item nav-link" href="https://github.com/vickysangwan">Git</a>
@@ -52,34 +48,21 @@
 </header>
 
 <main role="main">
-
-  <section class="jumbotron text-center">
-    <div class="container">
-      <h1 class="jumbotron-heading">Hi,I'm Vikash</h1>
-      <p class="lead text-muted">Hey,my name is Vikash Sangwan i'm a python programmer , ethical hacker and full stack developer.</p>
-      <p>
-        <a href="mailto:vickysangwan@protonmail.com" class="btn btn-primary my-2">Email Me</a>
-      </p>
-    </div>
-  </section>
-
-  <div class="album py-5 bg-light">
-    <div class="container">
-      <div class="row">
-        {% for job in jobs.all %}
-        <div class="col-md-4">
-          <div class="card mb-4 shadow-sm">
-           <img class="card-img-top" height=290 src="{{ job.image.url }}">
-            <div class="card-body">
-              <p class="card-text">{{ job.summary }}</p>
-            </div>
-          </div>
-        </div>
-        {% endfor %}
-      </div>
-    </div>
+  <div class="container">
+     <h1 class="text-center pt-3">Welcome to Vikash Sangwan's Blog</h1>
+     <br />
+     <h2>Latest Posts</h2>
+     <hr>
+     {% for blog in blogs.all %}
+     <a href="#"><h3>{{ blog.title }}</h3></a>
+     {{ blog.pub_date_pretty }}  
+     <br />
+     <br>
+     <img class="img-fluid" src="{{ blog.image.url }}" height=200 width=150> 
+     <br> 
+     {{ blog.summary }}
+     {% endfor %}
   </div>
-
 </main>
 
 <footer class="text-muted">
