--- a/blog/Templates/blog/allblog.html
+++ b/blog/Templates/blog/allblog.html
@@ -1,4 +1,4 @@
-
+{% load static %}
 <!doctype html>
 <html lang="en">
   <head>
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>VIKASH SANGWAN</title>
     <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/album/">
+    <link rel="stylesheet" type="text/css" href="{% static 'allblog.css' %}">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
 
@@ -25,46 +26,48 @@
         }
       }
     </style>
-    <link href="album.css" rel="stylesheet">
+    <!-- <link href="album.css" rel="stylesheet"> -->
   </head>
   <body>
 <header>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">Vikash Sangwan </a>
+    <a class="navbar-brand" href="{% url 'home' %}">Vikash Sangwan </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav ml-auto">
-        <a class="nav-item nav-link" href="#">Resume<span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link active" href="#">Blog</a>
+        <a class="nav-item nav-link" href="{% static 'Resume.pdf' %}">Resume<span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link active" href="{% url 'allblog' %}">Blog</a>
         <a class="nav-item nav-link" href="https://www.linkedin.com/in/vikash-sangwan-608305169/">Linkdin</a>
-        <a class="nav-item nav-link" href="#">Twitter</a>
+        <a class="nav-item nav-link" href="https://twitter.com/VIKASHSANGWAN13">Twitter</a>
         <a class="nav-item nav-link" href="https://github.com/vickysangwan">Git</a>
 
       </div>
     </div>
   </nav>
 </header>
+  <main role="main">
+    <div class="container">
 
-<main role="main">
-  <div class="container">
-     <h1 class="text-center pt-3">Welcome to Vikash Sangwan's Blog</h1>
-     <br />
-     <h2>Latest Posts</h2>
-     <hr>
-     {% for blog in blogs.all %}
-     <a href="#"><h3>{{ blog.title }}</h3></a>
-     {{ blog.pub_date_pretty }}  
-     <br />
-     <br>
-     <img class="img-fluid" src="{{ blog.image.url }}" height=200 width=150> 
-     <br> 
-     {{ blog.summary }}
-     {% endfor %}
+    <h1 class="text-center pt-3">Welcome to Sangwan's Blog</h1>
+    <br />
+    <br />
+    <h2>Latest Posts</h2>
+    <hr />
+
+    {% for blog in blogs.all %}
+    <a href="{% url 'details' blog.id %}"><h3>{{ blog.title }}</h3></a>
+    {{ blog.pub_date_pretty }}
+    <br />
+    <img class="img-fluid" src="{{ blog.image.url }}" height=200 width=200 />
+    <br />
+    <p>{{ blog.summary }}</p>
+    {% endfor %}
+
   </div>
-</main>
 
+  </main>
 <footer class="text-muted">
   <div class="container text-center">
   <p>&copy; Vikas Sangwan  {% now "Y" %}</p>
