--- a/blog/Templates/blog/details.html
+++ b/blog/Templates/blog/details.html
@@ -1,4 +1,4 @@
-
+{% load static %}
 <!doctype html>
 <html lang="en">
   <head>
@@ -26,21 +26,21 @@
         }
       }
     </style>
-    <link href="album.css" rel="stylesheet">
+    <!-- <link href="album.css" rel="stylesheet"> -->
   </head>
   <body>
 <header>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">Vikash Sangwan </a>
+    <a class="navbar-brand" href="{% url 'home' %}">Vikash Sangwan </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav ml-auto">
-        <a class="nav-item nav-link" href="#">Resume<span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link active" href="allblog.html">Blog</a>
+        <a class="nav-item nav-link" href="{% static 'Resume.pdf' %}">Resume<span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link active" href="{% url 'allblog' %}">Blog</a>
         <a class="nav-item nav-link" href="https://www.linkedin.com/in/vikash-sangwan-608305169/">Linkdin</a>
-        <a class="nav-item nav-link" href="#">Twitter</a>
+        <a class="nav-item nav-link" href="https://twitter.com/VIKASHSANGWAN13">Twitter</a>
         <a class="nav-item nav-link" href="https://github.com/vickysangwan">Git</a>
 
       </div>
