--- a/portfolio_project/static/allblog.css
+++ b/portfolio_project/static/allblog.css
@@ -1,27 +1,13 @@
-.blog_container{
-	float: left;
-	margin-left: 10%;
-	margin-right: 10%;
-	background-color: white;
-	height: 30%;
-	width: 80%;
-	border: 0;
-
+/*.blog-box
+{
+	display: flex;
+	justify-content: space-around;
 }
-
-.blog_image{
-
-	float: left;
-    margin-left: 0px;
-    height: 30%;
-    width: 30%;
-
-
+*/.blog-body
+{
+	float: right;
 }
+.fontss{
 
-.blog_discrption{
-	float: left;
-	margin-left: 10%;
-	height: 30%;
-	width:30%;
+	font-family: 'Share', cursive;
 }
