--- a/blog/Templates/blog/details.html
+++ b/blog/Templates/blog/details.html
@@ -5,8 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>VIKASH SANGWAN</title>
-
     <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/album/">
+    <link href="https://fonts.googleapis.com/css?family=Share:700i&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
 
@@ -26,12 +27,11 @@
         }
       }
     </style>
-    <!-- <link href="album.css" rel="stylesheet"> -->
   </head>
   <body>
 <header>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="{% url 'home' %}">Vikash Sangwan </a>
+    <a class="navbar-brand" href="{% url 'home' %}" style="font-family: 'Share', cursive;">Vikash Sangwan </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -50,21 +50,26 @@
 
 <main role="main">
 
-  <section class="jumbotron text-center">
+  <section class="jumbotron">
     <div class="container">
-      <h1 class="jumbotron-heading">{{ blogdetails.title }}</h1>
+      <h1 class="jumbotron-heading display-3 text-center">{{ blogdetails.title }}</h1>
       <p>
         <h5>{{ blogdetails.pub_date_pretty }}</h5>
       </p>
     </div>
   </section>
-
-  <div class="album py-5 bg-light">
-    <div class="container ">
-       <p class="card-text">{{ blogdetails.body }}</p>
-       <img class="img-fluid" src="{{ blogdetails.image.url }}" height=200 width=150>
+<div class="jumbotron">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-4 btn-holder">
+        <img class="img-responsive img-fluid img-thumbnail" src="{{ blogdetails.image.url }}" height=400 width=320>
+      </div>
+      <div class="col-sm-4">
+        <p class="card-text" style="font-family: 'Raleway', sans-serif;">{{ blogdetails.body }}</p>
+      </div>
     </div>
   </div>
+</div>
 
 </main>
 
@@ -77,3 +82,4 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script></body>
 </html>
+
