--- a/blog/Templates/blog/allblog.html
+++ b/blog/Templates/blog/allblog.html
@@ -41,7 +41,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav ml-auto">
-        <a class="nav-item nav-link" href="{% static 'Resume.pdf' %}">Resume<span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link" href="{% static 'Vikas.pdf' %}">Resume<span class="sr-only">(current)</span></a>
         <a class="nav-item nav-link active" href="{% url 'allblog' %}">Blog</a>
         <a class="nav-item nav-link" href="https://www.linkedin.com/in/vikash-sangwan-608305169/">Linkdin</a>
         <a class="nav-item nav-link" href="https://twitter.com/VIKASHSANGWAN13">Twitter</a>
